Version 20120310
 * Update PKGBUILD to reflect upstream migration to git
Version 5377-1
 * Bump pkgversion to 5377
 * General cleanup
 * Be a little bit more verbose during build()
 * Use rsync to copy files into build-directory, this way we won't need to copy the hidden svn dir
 * Add rsync to makedeps
Version 5375-1
 * Bump pkgversion to 5375 to suggest rebuild since libpng has been upgraded
Version 5366-1
 * Bump pkgversion to 5366
 * Fix PKGBUILD changelog line
Version 5245-1
 * Version bump since FreedroidRPG 0.15 has been released
Version 5243-1
 * Add mesa as optdepends (for opengl mode)
 * Version bump since FreedroidRPG 0.15rc2 has been released
Version 5202-1
 * Version bump since FreedroidRPG 0.15rc1 has been released
Version 5118-1
 * Make the e-mail addresses harder to read for machines
 * Bump pkgversion to 5118
 * Change some indentation
 * Print some more output when compiling
Version 5053-1
 * Introduce Changelog
 * Bump pkgversion to 5052
 * Change pkgdescription a little
 * Dependencies:
   * Add lua, sdl, sdl_gfxm and python (buildtime dependency)
   * Add a comment about espeak which was used to generate the bot voice samples
 * Remove the icon from the tarball, instead download the icon from our buildbot website
 * Minor indent changes
Version 3146-1
 * Version by gwash