@@ -1,5 +1,4 @@
 post_install() {
   echo "CodeViz uses patched version of gcc to generate callgraphs."
   echo "This patched version of gcc has been installed to /opt/gccgraph"
-EOF
 }
