@@ -1,7 +1,7 @@
 # Contributor: Orivej Desh <orivej@gmx.fr>
 pkgname=cups-canon-3.00
 pkgver=3.00
-pkgrel=3
+pkgrel=4
 pkgdesc="Canon iP3600, iP4600, MP630, MP540, MP240, MP190 and iP1900 CUPS drivers"
 arch=("i686" "x86_64")
 url="http://software.canon-europe.com/software/0031332.asp"
@@ -37,6 +37,22 @@ build() {
   install -d "$pkgdir/usr/share/cups/model"
   install -m644 ppd/*ppd "$pkgdir/usr/share/cups/model"
 
+  # Particular
+  TARGETS=(lgmon cngpijmon)
+  for model in ${MODELS[@]}; do
+    echo -e "..........\n. $model\n.........."
+    for target in ${TARGETS[@]}; do
+      cd $target
+      echo ".......... $target"
+      ./autogen.sh --prefix=/usr --enable-libpath=/usr/lib/bjlib --enable-binpath=/usr/bin --enable-progpath=/usr/bin --program-suffix=$model
+      make clean
+      make
+      make DESTDIR="$pkgdir" install
+      cd ..
+    done
+  done
+
+  # Prepackaged TARGETS=(cnijfilter printui)
   install ../bin64/* "$pkgdir/usr/bin"
 
   install -d "$pkgdir/usr/lib/bjlib"
