@@ -2,12 +2,12 @@
 # Maintainer: Stefan Husmann <stefan-husmann@t-online.de>
  
 pkgname=emacs-icicles
-pkgver=22.0.23086 # Taken from icicles.el
+pkgver=22.0.23087 # Taken from icicles.el
 pkgrel=1
 pkgdesc="an emacs library that enhances minibuffer completion"
 arch=('any')
 url="http://www.emacswiki.org/emacs/Icicles"
-license=(GPL)
+license=('GPL')
 makedepends=(wget)
 source=(http://www.emacswiki.org/emacs/download/get-icicles.sh)
 md5sums=('93857a3934a576e9fbf69f2c7f355ebd')
@@ -21,6 +21,6 @@ build() {
   emacs -Q -batch -L . -f batch-byte-compile *.el || true
 }
 package() {
-  install -d  $pkgdir/usr/share/emacs/site-lisp/icicles
-  cp -r $srcdir/icicles/* $pkgdir/usr/share/emacs/site-lisp/icicles
+  install -d  "$pkgdir"/usr/share/emacs/site-lisp/icicles
+  cp -r "$srcdir"/icicles/* "$pkgdir"/usr/share/emacs/site-lisp/icicles
 }
