@@ -1,14 +1,14 @@
 # Contributor: M Rawash <mrawash _stange_curved_character_ gmail D0T com>
 # Maintainer: matthiaskrgr <matthiaskrgr _strange_curverd_character_ freedroid D0T org>
 pkgname=freedroidrpg-git
-pkgver=20120310
+pkgver=20120311
 pkgrel=1
 pkgdesc="A science fiction role playing game which tells the story of a world destroyed by a conflict between robots and their human masters - development version"
 url="http://www.freedroid.org"
 license=('GPL')
 arch=('i686' 'x86_64')
-#makedepends=('subversion' 'python' 'rsync' 'optipng' 'jpegoptim' 'gawk')
-makedepends=('subversion' 'python' 'rsync')
+#makedepends=('git' 'python' 'optipng' 'jpegoptim' 'gawk')
+makedepends=('git' 'python')
 depends=('lua' 'sdl' 'sdl_image' 'libgl' 'sdl_mixer' 'sdl_gfx' 'libogg' 'libvorbis')
 #optdepends=('espeak: used to generate the bot voice samples, actually not needed at build or runtime, thus commented')
 optdepends=('mesa: to run the game in opengl mode')
@@ -20,7 +20,7 @@ source=("http://buildbot.freedroid.org/logo.png"
         "changelog")
 sha1sums=('4a9b3ffadae7367c0f30025370cb7d27ba38fcc1'
           '463708161658e15aa555de14ef18ea1fcc0a2758'
-          'b03960bac99f48d4b11e41f7ea1b78d575d7c4eb')
+          '0c40336c5c1d9e9f0a844330320284aa290ce07a')
 
 _gitroot="git://freedroid.git.sourceforge.net/gitroot/freedroid/freedroid"
 _gitname="freedroid"
