@@ -4,12 +4,12 @@
 pkgname=freetype2-lcd_
 _realname=freetype
 pkgver=2.4.9
-pkgrel=1
+pkgrel=2
 pkgdesc="TrueType font rendering library for LCD Displays"
 arch=('i686' 'x86_64')
 license=('GPL')
 url="http://freetype.sourceforge.net"
-depends=('zlib' 'cairo>=1.10.0' 'libxft-lcd')
+depends=('zlib' 'cairo>=1.10.0' 'libxft')
 provides=("freetype2=${pkgver}")
 conflicts=('freetype2' 'freetype2-lcd')
 options=('!libtool')
