@@ -1,15 +1,15 @@
 post_install() {
-  gtk-update-icon-cache -q -t -f usr/share/icons/hicolor
+  gtk-update-icon-cache -q -t -f /usr/share/icons/hicolor
   echo "
     Gufw needs DBUS service started to run correctly!"
 }
 
 post_upgrade() {
-  gtk-update-icon-cache -q -t -f usr/share/icons/hicolor
+  gtk-update-icon-cache -q -t -f /usr/share/icons/hicolor
   echo "
     Gufw needs DBUS service started to run correctly!"
 }
 
 post_remove() {
-  gtk-update-icon-cache -q -t -f usr/share/icons/hicolor
+  gtk-update-icon-cache -q -t -f /usr/share/icons/hicolor
 }
