@@ -1,0 +1,2 @@
+#!/bin/sh
+java -jar /usr/share/java/javablock/JavaBlock.jar
