@@ -1,38 +1,33 @@
-# Maintainer: Schala
-
 pkgname=mingw32-libglademm
 pkgver=2.6.7
-pkgrel=1
+pkgrel=2
 arch=(any)
-pkgdesc="C++ wrapper for libglade (mingw32)"
-depends=(mingw32-libglade)
+pkgdesc="A C++ wrapper for libglade. (mingw32)"
+depends=(mingw32-runtime mingw32-libglade)
 makedepends=(mingw32-gcc)
-options=(!strip !buildflags)
+options=(!strip !buildflags !libtool)
 license=('LGPL')
 url="http://www.gtkmm.org/"
-source=(http://ftp.gnome.org/pub/gnome/sources/libglademm/2.6/libglademm-${pkgver}.tar.bz2)
+source=("http://ftp.gnome.org/pub/gnome/sources/libglademm/2.6/libglademm-${pkgver}.tar.bz2")
 md5sums=('f9ca5b67f6c551ea98790ab5f21c19d0')
 
 build()
 {
-  cd $startdir/src/libglademm-$pkgver
-
+  cd "$srcdir/libglademm-$pkgver"
   export CFLAGS="-O2 -mms-bitfields"
   export PKG_CONFIG_PATH="/usr/i486-mingw32/lib/pkgconfig/"
-
-  ./configure \
+  mkdir build && cd build
+  ../configure \
     --prefix=/usr/i486-mingw32 \
-    --host=i486-mingw32 \
-    --build=$CHOST \
-    || exit 1
+    --host=i486-mingw32
+  make
+}
 
-  make || exit 1
-  mkdir -p $startdir/pkg/usr/i486-mingw32/lib
-  make install DESTDIR=$startdir/pkg || exit 1
-
-  cd $startdir/pkg
-  find . -name '*.a' -o -name '*.dll' -o -name '*.exe' \
-    | xargs -rtl1 i486-mingw32-strip -g
-  
-  rm -rf usr/i486-mingw32/share/gtk-doc
+package() {
+  cd "$srcdir/libglademm-$pkgver/build"
+  mkdir -p "$pkgdir/usr/i486-mingw32/lib"
+  make install DESTDIR=$pkgdir
+  i486-mingw32-strip -x $pkgdir/usr/i486-mingw32/bin/*.dll
+  i486-mingw32-strip -g $pkgdir/usr/i486-mingw32/lib/*.a
+  rm -rf "$pkgdir/usr/i486-mingw32/share"
 }
