@@ -1,23 +1,23 @@
 # Maintainer: Clemens Buchacher <drizzd@aon.at>
-_pack=control
+_pack=data-smoothing
 pkgname=octave-$_pack
-pkgver=2.3.50
+pkgver=1.3.0
 pkgrel=1
-pkgdesc="Octave control systems package based on the proven SLICOT library"
+pkgdesc="Algorithms for smoothing noisy data"
 arch=(any)
 url="http://octave.sourceforge.net/$_pack/"
 license=('GPL3')
 groups=('octave-forge')
-depends=('octave>=3.4.0')
-makedepends=('gcc-fortran')
+depends=('octave>=3.6.0' 'octave-optim>=1.0.3')
+makedepends=()
 optdepends=()
 backup=()
-options=('!makeflags')
+options=()
 install=$pkgname.install
 _archive=$_pack-$pkgver.tar.gz
 source=("http://downloads.sourceforge.net/octave/$_archive")
 noextract=("$_archive")
-md5sums=('a9deb6cfcd08641cb1a442fff5af6f83')
+md5sums=('d8fc52ed097b5096f5e7ea16dc5ab343')
 
 build() {
   cd "$srcdir"
