@@ -1,23 +1,23 @@
 # Maintainer: Clemens Buchacher <drizzd@aon.at>
-_pack=control
+_pack=octcdf
 pkgname=octave-$_pack
-pkgver=2.3.50
+pkgver=1.1.4
 pkgrel=1
-pkgdesc="Octave control systems package based on the proven SLICOT library"
+pkgdesc="A NetCDF interface for octave"
 arch=(any)
 url="http://octave.sourceforge.net/$_pack/"
-license=('GPL3')
+license=('GPL')
 groups=('octave-forge')
 depends=('octave>=3.4.0')
-makedepends=('gcc-fortran')
+makedepends=()
 optdepends=()
 backup=()
-options=('!makeflags')
+options=()
 install=$pkgname.install
 _archive=$_pack-$pkgver.tar.gz
 source=("http://downloads.sourceforge.net/octave/$_archive")
 noextract=("$_archive")
-md5sums=('a9deb6cfcd08641cb1a442fff5af6f83')
+md5sums=('de10840e48e9033e6ae165480f73cf4f')
 
 build() {
   cd "$srcdir"
