@@ -1,23 +1,23 @@
 # Maintainer: Clemens Buchacher <drizzd@aon.at>
-_pack=control
+_pack=queueing
 pkgname=octave-$_pack
-pkgver=2.3.50
+pkgver=1.0.0
 pkgrel=1
-pkgdesc="Octave control systems package based on the proven SLICOT library"
+pkgdesc="The queueing toolbox provides functions for queueing"
 arch=(any)
 url="http://octave.sourceforge.net/$_pack/"
 license=('GPL3')
 groups=('octave-forge')
-depends=('octave>=3.4.0')
-makedepends=('gcc-fortran')
+depends=('octave>=3.0.0')
+makedepends=()
 optdepends=()
 backup=()
-options=('!makeflags')
+options=()
 install=$pkgname.install
 _archive=$_pack-$pkgver.tar.gz
 source=("http://downloads.sourceforge.net/octave/$_archive")
 noextract=("$_archive")
-md5sums=('a9deb6cfcd08641cb1a442fff5af6f83')
+md5sums=('2e1b3e29d41e0dbaa2dbf7b45de1146a')
 
 build() {
   cd "$srcdir"
