@@ -1,3 +1,5 @@
+Version 20120311
+ * Replace makedepends subversion and rsync by git
 Version 20120310
  * Update PKGBUILD to reflect upstream migration to git
 Version 5377-1
